# search_engine

./: Abstract.h  CMakeLists.txt  CommandHandler.h  ConvertJSON.h  FinderTXT.h  SearchEngine.h  main.c  main.cpp
formats/: FinderTXT.h  Finder_JSON.h
main/: Abstract.h
utilites/: Answer.h  CommandHandler.h
